# data-jobs-skills

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: Home.py
app/pages/: 1_Role_Skills.py
data_jobs_skills_explorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  constants.py  jobsearch_client.py  normalize.py  skills.py
