[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-jobs-skills-explorer"
version = "0.1.0"
description = "Streamlit app that analyzes job postings to surface in-demand data skills."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.32",
  "pandas>=2.1",
  "requests>=2.31",
  "altair>=5.2",
]

[tool.setuptools]
packages = ["src"]

